[package]
name = "nuclear-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
dotenv = "0.15.0"
enum-map = "2.7.3"
fern = { version = "0.7.0", features = ["colored"] }
lazy_static = "1.5.0"
log = "0.4.22"
mongodb = "3.1.0"
reqwest = { version = "0.12.9", features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
